# google-analytics-cli

./: .env.example  .gitignore  README.md  pyproject.toml
analytics_cli/: cli.py  server.py
analytics_cli/tools/: utils.py
analytics_cli/tools/admin/: info.py
analytics_cli/tools/reporting/: core.py  metadata.py  realtime.py
tests/: server_test.py  utils_test.py
