[project]
name = "analytics-cli"
description = "CLI for Google Analytics"
version = "1.0.0"
requires-python = ">=3.10"
license = "Apache-2.0"
readme = "README.md"
dependencies = [
  "google-analytics-data==0.20.0",
  "google-analytics-admin==0.27.0",
  "google-auth~=2.40",
  "python-dotenv>=1.0.1",
  "typer>=0.12.5",
]
keywords = ["google analytics", "analytics", "cli", "ga4"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: End Users/Desktop",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
  "Topic :: Internet",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Information Analysis",
]

[project.urls]
homepage = "https://github.com/TudorAndrei/google-analytics-cli"
repository = "https://github.com/TudorAndrei/google-analytics-cli.git"
issues = "https://github.com/TudorAndrei/google-analytics-cli/issues"


[project.scripts]
analytics-cli = "analytics_cli.server:run_server"

[project.optional-dependencies]
dev = ["black", "nox >=2025.5.1, <2026"]

[build-system]
requires = ["setuptools>=69.0.0", "wheel"]
build-backend = "setuptools.build_meta"
